引入js文件名大小写问题

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script type="text/javascript" src="./js/ajaxUploadFile.js"></script>
+	<script type="text/javascript" src="./js/AjaxUploadFile.js"></script>
 	<script type="text/javascript">
 	onload=function(){
 		document.getElementById("sub").onclick=function(){
